--- a/src/components/MakePost.css
+++ b/src/components/MakePost.css
@@ -37,10 +37,6 @@
     right: 1%;
 }
 
-.postContainer {
-    border: 1px solid green;
-    /* height: 100% */
-}
 
 .postInfoBox {
     border: 1px solid yellow;
@@ -72,3 +68,22 @@
     background-color: red !important;
 }
 
+.descriptionInput{
+    max-height: 150px !important;
+    overflow-y: auto !important;
+}
+
+
+#listingPics{
+    height: 100%;
+}
+
+/* #imageUpload{
+    position: relative !important;
+    top: 50% !important;
+} */
+
+.picsContainer{
+    border: 1px solid blue;
+    height: 80%;
+}
