--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,9 +6,11 @@
 
 .settingsContainer{
     display: block;
-    left: 3%;
+    left: 200px;
     float: right;
-    width: 180px;}
+    width: 180px;
+    top:17px;
+}
 
 .navbar{
     height: 110px;
