--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -25,8 +25,7 @@
     text-align: center;
     padding-top: 0.5vh;
     height: 100%;
-    overflow-y: auto;
-    font-size: 25px;
+    overflow-y: scroll;
 }
 
 #progressMessage {
@@ -142,12 +141,7 @@ hr {
 
 #biography {
     margin: 4vh 0 0 1vw;
-    overflow-y: auto;
-}
-
-#noListings {
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow-y: scroll;
 }
 
 #ratingArea {
