--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -186,11 +186,13 @@ hr {
     background: transparent;
     position: absolute;
     left: 0vw;
-    width: 100%;
+    /* width: 100%; */
     height: 36vh;
     font: 18px "Arial";
     float: left;
     font-weight: normal;
+    overflow-y: auto;
+    text-decoration: underline;
 }
 
 #iconLivin {
@@ -208,6 +210,8 @@ hr {
     font: 18px "Arial";
     float: right;
     font-weight: normal;
+    text-decoration: underline;
+    overflow-y: auto;
 }
 
 /* Scrollbar styles */
