--- a/src/components/MakePost.css
+++ b/src/components/MakePost.css
@@ -86,6 +86,7 @@
 
 #listingPics{
     height: 100%;
+    width: 60%;
 }
 
 /* #imageUpload{
@@ -96,4 +97,6 @@
 .picsContainer{
     border: 1px solid blue;
     height: 80%;
+    overflow-x: auto;
+    display: inline-flex;
 }
