--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -1,40 +1,3 @@
-
-
-#starContainer {
-    margin: auto;
-    width: 6.25vw;
-    padding: 1vh 0 1vh 0;
-}
-
-.ratingStars {
-    display: inline-block;
-    height: 1.25vw;
-    width: 1.25vw;
-}
-
-#progressAreaInner {
-    position: absolute;
-    left: 5%;
-    right: 5%;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-#progressTextArea {
-    text-align: center;
-    padding-top: 0.5vh;
-    height: 100%;
-    overflow-y: auto;
-    font-size: 25px;
-}
-
-#progressMessage {
-    padding-top: 1vh;
-    text-align: left;
-}
-
-
 #mainContainer {
     padding: 3.33vh 0 3.33vh 0;
     position: fixed;
@@ -83,8 +46,8 @@ hr {
 #profilePictureArea {
     background: transparent;
     position: absolute;
-    left: 0;
-    width: 16.33vw;
+    left: 12.5vw;
+    width: 16.66vw;
     height: 36vh;
 }
 
@@ -109,22 +72,13 @@ hr {
     font: 1.25em "Arial Black";
     position: absolute;
     left: 6vw;
-    top: 21vh;
+    top: 29vh;
 }
 
 #bioArea {
     position: absolute;
-    left: 16.33vw;
-    width: 32.66vw;
-    height: 36vh;
-    background:transparent;
-    font-size: 1.125em;
-}
-
-#bioAreaO {
-    position: absolute;
-    left: 16.33vw;
-    width: 43.66vw;
+    left: 29.16vw;
+    width: 33.33vw;
     height: 36vh;
     background:transparent;
     font-size: 1.125em;
@@ -141,8 +95,8 @@ hr {
 }
 
 #biography {
-    margin: 4vh 0 0 1vw;
-    overflow-y: auto;
+    height: 24vh;
+    overflow-y: scroll;
 }
 
 #noListings {
@@ -151,41 +105,64 @@ hr {
     overflow-y: scroll;
 }
 
-#ratingArea {
+#buttonArea {
     background:transparent;
     position: absolute;
-    left: 48.99vw;
+    left: 62.49vw;
     width: 16.33vw;
     height: 36vh;
 }
 
-#ratingString {
-    margin: 0;
-    padding: 4vh 0 1vh 0;
-    font: 1.5em Arial;
-    text-align: center;
+#buttonInner {
+    display: block;
+    padding: 3vh 1vw 0 1vw;
+    width: 15vw;
+    height: 10vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
-#buttonU{
-    margin-left: 2.5vw;
-    margin-top: 40%;
+.profButton {
+    width: 10vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-#buttonP{
-    margin-top:1vh;
-    margin-left:1vw;
-}
-
-#progressArea {
+#socialArea {
     border: 1px solid black;
     background: #f9f3e7;
     position: absolute;
-    left: 65.33vw;
-    width: 25.66vw;
+    left: 62.49vw;
+    right: 12.5vw;
+    width: 24.99vw;
     height: 20vh;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+}
+
+#socialInner {
+    position: absolute;
+    left: 5%;
+    right: 5%;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    text-align: center;
+    font-size: 1.125em;
+}
+
+#socialLinks {
+    text-align: center;
+    padding-top: 0.5vh;
+    height: 100%;
+    font-size: 1.25em;
 }
 
 #postedListings {
