--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -39,7 +39,7 @@
 
 .title{
   color: black;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: sans-serif;
   font-size: 36px;
 }
 .caret {
