--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -12,7 +12,7 @@
     width: 1.25vw;
 }
 
-#progressAreaInner {
+#socialInner {
     position: absolute;
     left: 5%;
     right: 5%;
@@ -21,17 +21,12 @@
     transform: translateY(-50%);
 }
 
-#progressTextArea {
+#socialLinks {
     text-align: center;
     padding-top: 0.5vh;
     height: 100%;
     overflow-y: auto;
     font-size: 25px;
-}
-
-#progressMessage {
-    padding-top: 1vh;
-    text-align: left;
 }
 
 
@@ -159,6 +154,12 @@ hr {
     height: 36vh;
 }
 
+#matchPercent{
+    line-height: 10;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+
 #ratingString {
     margin: 0;
     padding: 4vh 0 1vh 0;
@@ -176,7 +177,7 @@ hr {
     margin-left:1vw;
 }
 
-#progressArea {
+#socialArea {
     border: 1px solid black;
     background: #f9f3e7;
     position: absolute;
@@ -197,6 +198,19 @@ hr {
     height: 36vh;
     font: 18px "Arial";
     float: left;
+    font-weight: normal;
+    overflow-y: auto;
+    text-decoration: underline;
+}
+
+#postedListingsO {
+    display: grid;
+    background: transparent;
+    position: absolute;
+    left: 25%;
+    width:50%;
+    height: 36vh;
+    font: 18px "Arial";
     font-weight: normal;
     overflow-y: auto;
     text-decoration: underline;
