Checked for null posted listings and favorited listings and prints them out in rows of 3 on the bottom half of profile.js

--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -201,9 +201,9 @@ hr {
     position: absolute;
     left: 0vw;
     /* width: 100%; */
-    width:50% !important;
     height: 36vh;
     font: 18px "Arial";
+    width: 100%;
     float: left;
     font-weight: normal;
     overflow-y: auto;
@@ -231,15 +231,14 @@ hr {
     background: transparent;
     position: absolute;
     left: 50%;
-    width: 50%;
     height: 36vh;
+    width: 100%;
     font: 18px "Arial";
-    float: right;
+    float: left;
     font-weight: normal;
     text-decoration: underline;
+    
     overflow-y: auto;
-    width:50% !important;
-    text-align: center;
 }
 
 /* Scrollbar styles */
